--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <div class="container d-flex row align-items-center justify-content-center">
 
-                      <a href="/authentication" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
+                      <a href="/login/" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
                         Log in
                       </a>
                       <a href="/register/index.html" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
